tests/neg-custom-args/captures/scope-extrude-mut.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrude-mut.scala:9:8 ------------------------------
9 |    a = a1  // error
  |        ^^
  |        Found:    (a1 : A^)
  |        Required: A^²
  |
  |        Note that capability cap is not included in capture set {cap²}
  |        because cap in method b is not visible from cap² in variable a.
  |
  |        where:    ^    refers to a fresh root capability classified as Mutable in the type of value a1
  |                  ^²   refers to a fresh root capability classified as Mutable in the type of variable a
  |                  cap  is a fresh root capability classified as Mutable in the type of value a1
  |                  cap² is a fresh root capability classified as Mutable in the type of variable a
  |
  | longer explanation available when compiling with `-explain`
